--- a/settings.php.example
+++ b/settings.php.example
@@ -10,7 +10,7 @@ class GitHubSettings{
 	// GitHub OAuth information
 	const CLIENT_ID      = 'xxxxx';
 	const CLIENT_SECRET  = 'xxxxx';
-	const REDIRECT_URL   = 'http://xxxxx';
+	const REDIRECT_URL   = 'http://xxxxx/login_github';
 	const USER_AGENT     = 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:13.0) Gecko/20100101 Firefox/13.0.1';
 
 	// GitHub accounts allowed to edit contents; comma separated list.
